[gd_scene load_steps=13 format=3 uid="uid://bpw62ppjhvpts"]

[ext_resource type="Script" path="res://System/LevelEnd/GD_VictoryOverlay.gd" id="1_7oi2a"]
[ext_resource type="FontFile" uid="uid://deynq3w2tsjig" path="res://Assets/Font/VCR_OSD_MONO_1.001.ttf" id="1_mm01j"]
[ext_resource type="PackedScene" uid="uid://b5hnlctbpogh3" path="res://System/LevelEnd/S_RewardContainer.tscn" id="2_d03qb"]
[ext_resource type="PackedScene" uid="uid://joj10m72gf2o" path="res://System/LevelEnd/S_EXPstatContainerr.tscn" id="5_xiyif"]
[ext_resource type="PackedScene" uid="uid://bjmpba0hyawoe" path="res://System/LevelEnd/S_CharUpContainer.tscn" id="7_oh0bv"]

[sub_resource type="Gradient" id="Gradient_5sjnk"]
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_swwdf"]
gradient = SubResource("Gradient_5sjnk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m7gwk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lwnfm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2pars"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipaa3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_md6pj"]

[node name="VictoryOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_7oi2a")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.627451)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 120.0
offset_top = 120.0
offset_right = 1800.0
offset_bottom = 960.0
color = Color(1, 1, 1, 0.784314)

[node name="Lines" type="Control" parent="ColorRect/ColorRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="line1" type="TextureRect" parent="ColorRect/ColorRect/Lines"]
layout_mode = 0
offset_left = 36.0
offset_top = 104.0
offset_right = 1636.0
offset_bottom = 112.0
texture = SubResource("GradientTexture1D_swwdf")

[node name="line2" type="TextureRect" parent="ColorRect/ColorRect/Lines"]
layout_mode = 0
offset_left = 60.0
offset_top = 180.0
offset_right = 480.0
offset_bottom = 188.0
texture = SubResource("GradientTexture1D_swwdf")

[node name="line3" type="TextureRect" parent="ColorRect/ColorRect/Lines"]
layout_mode = 0
offset_left = 500.0
offset_top = 180.0
offset_right = 1000.0
offset_bottom = 188.0
texture = SubResource("GradientTexture1D_swwdf")

[node name="line4" type="TextureRect" parent="ColorRect/ColorRect/Lines"]
layout_mode = 0
offset_left = 1080.0
offset_top = 180.0
offset_right = 1590.0
offset_bottom = 188.0
texture = SubResource("GradientTexture1D_swwdf")

[node name="Titles" type="Control" parent="ColorRect/ColorRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VictoryTitle" type="Label" parent="ColorRect/ColorRect/Titles"]
layout_mode = 2
offset_left = 48.0
offset_top = 40.0
offset_right = 272.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mm01j")
theme_override_font_sizes/font_size = 48
text = "VICTORY!"

[node name="RewardsTitle" type="Label" parent="ColorRect/ColorRect/Titles"]
layout_mode = 0
offset_left = 80.0
offset_top = 144.0
offset_right = 213.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mm01j")
theme_override_font_sizes/font_size = 32
text = "Rewards"

[node name="CharTitle" type="Label" parent="ColorRect/ColorRect/Titles"]
layout_mode = 0
offset_left = 520.0
offset_top = 144.0
offset_right = 710.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mm01j")
theme_override_font_sizes/font_size = 32
text = "Characters"

[node name="CharUpTitle" type="Label" parent="ColorRect/ColorRect/Titles"]
layout_mode = 0
offset_left = 1100.0
offset_top = 144.0
offset_right = 1423.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mm01j")
theme_override_font_sizes/font_size = 32
text = "Character Upgrade"

[node name="VBox_rewards" type="VBoxContainer" parent="ColorRect/ColorRect"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 0
offset_left = 60.0
offset_top = 204.0
offset_right = 420.0
offset_bottom = 476.0
theme_override_constants/separation = 16

[node name="RewardContainer" parent="ColorRect/ColorRect/VBox_rewards" instance=ExtResource("2_d03qb")]
layout_mode = 2
reward_name = "EXP"
reward_exp = 777

[node name="RewardContainer2" parent="ColorRect/ColorRect/VBox_rewards" instance=ExtResource("2_d03qb")]
layout_mode = 2
reward_name = "Itachi"
char_id = "PC4"

[node name="RewardContainer3" parent="ColorRect/ColorRect/VBox_rewards" instance=ExtResource("2_d03qb")]
layout_mode = 2
reward_name = "Charm2"
charm_id = "C2"

[node name="VBox_characters" type="VBoxContainer" parent="ColorRect/ColorRect"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 0
offset_left = 500.0
offset_top = 204.0
offset_right = 980.0
offset_bottom = 560.0
theme_override_constants/separation = 16

[node name="EXPstatContainer" parent="ColorRect/ColorRect/VBox_characters" instance=ExtResource("5_xiyif")]
layout_mode = 2
char_name = "Naruto"
lvl = 2
c_exp = 12
g_exp = 50

[node name="EXPstatContainer2" parent="ColorRect/ColorRect/VBox_characters" instance=ExtResource("5_xiyif")]
layout_mode = 2
char_name = "Sakura"
char_id = "PC2"
c_exp = 7
g_exp = 10
lvl_up = false

[node name="EXPstatContainer3" parent="ColorRect/ColorRect/VBox_characters" instance=ExtResource("5_xiyif")]
layout_mode = 2
char_name = "Sasuke"
char_id = "PC3"
c_exp = 1
g_exp = 5
lvl_up = false

[node name="VBox_charUp" type="VBoxContainer" parent="ColorRect/ColorRect"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = 1080.0
offset_top = 204.0
offset_right = 1580.0
offset_bottom = 776.0
theme_override_constants/separation = 16

[node name="CharUpContainer" parent="ColorRect/ColorRect/VBox_charUp" instance=ExtResource("7_oh0bv")]
layout_mode = 2
char_name = "Naruto"
hp = 12
atk = 12
def = 10
spd = 10
hp_up = true
atk_up = true
char_id = "PC1"
skill_id_1 = "S1"
skill_id_2 = "S2"

[node name="CharUpContainer2" parent="ColorRect/ColorRect/VBox_charUp" instance=ExtResource("7_oh0bv")]
layout_mode = 2
char_name = "Sakura"
hp = 10
atk = 10
def = 10
spd = 10
atk_up = true
def_up = true
char_id = "PC2"

[node name="CharUpContainer3" parent="ColorRect/ColorRect/VBox_charUp" instance=ExtResource("7_oh0bv")]
layout_mode = 2
char_name = "Sasuke"
hp = 10
atk = 10
def = 10
spd = 10
char_id = "PC3"
skill_id_1 = "S1"

[node name="HBox_button" type="HBoxContainer" parent="ColorRect/ColorRect"]
layout_mode = 0
offset_left = 1203.0
offset_top = 788.0
offset_right = 1658.0
offset_bottom = 823.0

[node name="mainMenu" type="Button" parent="ColorRect/ColorRect/HBox_button"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.101961, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mm01j")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_m7gwk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lwnfm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2pars")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ipaa3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_md6pj")
text = "Main Menu"

[node name="line" type="Label" parent="ColorRect/ColorRect/HBox_button"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mm01j")
theme_override_font_sizes/font_size = 36
text = "|"
horizontal_alignment = 1
vertical_alignment = 2

[node name="nextLevel" type="Button" parent="ColorRect/ColorRect/HBox_button"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.101961, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mm01j")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_m7gwk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lwnfm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2pars")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ipaa3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_md6pj")
text = "Next Level"
